@@ -4,6 +4,9 @@ Revision history for {{$dist->name}}
   [Incompatible Changes]
   - The cache `file` has no default, and should be set by the user unless the `cache` is overridden.
 
+  [Enhancements]
+  - Added a `retry_after` attribute to change the default Retry-After header.
+
   [Documentation]
   - Added note to KNOWN ISSUES about how some search engines handle HTTP 429 responses.
 
